packages/frontend/scss/message/_message.scss
@use '../mixins';
@use '../variables';

.message-wrapper {
  --shortcut-menu-visibility: hidden;
  --shortcut-menu-multiplier: 0;
  &:hover {
    --shortcut-menu-visibility: visible;
    --shortcut-menu-multiplier: 1;
  }
}

/* Message Bubble */
.message {
  position: relative;
  display: inline-flex;
  flex-direction: row;
  align-items: stretch;
  max-width: 75%;

  & > .author-avatar {
    @include mixins.button-reset;

    align-self: flex-end;
    bottom: 0px;
    position: static;
    margin-right: 8px;
    user-select: none;

    img {
      height: 36px;
      width: 36px;
      border-radius: 18px;
      object-fit: cover;
      cursor: pointer;
    }

    &.default {
      // text letter version
      text-align: center;

      & > .label {
        user-select: none;
        color: var(--avatarLabelColor);
        --local-avatar-color: #bcbac9;
        background-color: var(--local-avatar-color);

        top: -121px;
        left: -10px;
        border-radius: 50%;
        width: 36px;
        height: 36px;
        font-size: 25px;
        line-height: 36px;
        cursor: pointer;

        @supports (
          // text-wrap was introduced in 2023 slightly after color-mix,
          // since we can't test for color-mix support directly we use this instead.
          text-wrap: wrap
        ) {
          // make avatars look slightly 3D
          background: linear-gradient(
            var(--avatarGradientAngle),
            var(--local-avatar-color),
            color-mix(
              in srgb,
              var(--local-avatar-color) var(--avatarGradientMixFactor),
              white
            )
          );
        }
      }
    }
  }

  .msg-container {
    position: relative;
    display: inline-block;
    max-width: 100%;
    border-radius: 16px;
    --msg-container-padding-horizontal: 12px;
    --msg-container-padding-top: 10px;
    padding-right: var(--msg-container-padding-horizontal);
    padding-left: var(--msg-container-padding-horizontal);
    padding-top: var(--msg-container-padding-top);
    padding-bottom: 10px;

    .msg-body {
      &.msg-body--clickable {
        @include mixins.button-reset;
        display: block;

        > .text {
          cursor: pointer;
        }
      }

      & > .text {
        color: var(--messageText);
        font-size: 14px;
        line-height: 18px;
        text-align: start;

        overflow-wrap: break-word;
        word-wrap: break-word;
        word-break: break-word;
        white-space: pre-wrap;
        cursor: default;

        margin-right: 10px;
      }
    }

    .webxdc {
      img {
        height: 171px;
        border-radius: 7%;
        cursor: pointer;
        user-select: none;
        // firefox does not support this, but chromium and webkit do https://caniuse.com/?search=user-drag
        -webkit-user-drag: none;
      }
      div.name {
        font-size: medium;
        font-weight: 300;
      }
      div.experimental {
        color: var(--colorDanger);
        background: var(--contextMenuBg);
        border-radius: 8px;
      }
    }
  }

  .metadata {
    margin-top: 10px;
    margin-bottom: -7px;
  }

  .module-message__img-attachment {
    object-fit: cover;
    width: auto;
    max-width: 100%;
    min-height: unset;
  }

  .show-html {
    @include mixins.button-reset;

    border: none;
    background-color: transparent;
    padding-left: 0;
    color: var(--colorPrimary);
    &:hover {
      cursor: pointer;
    }
  }

  .download {
    span.failed {
      color: var(--colorDanger);
      font-weight: bold;
    }

    button {
      border: none;
      background-color: transparent;
      padding-left: 0;
      color: var(--colorPrimary);
    }
  }
}

// States that modify the message bubble appearance

.message.incoming {
  margin-left: 0;

  .metadata:not(.with-image-no-caption) {
    .padlock-icon {
      @include mixins.color-svg(
        './images/padlock.svg',
        var(--messageMetadataIconColorIncoming),
        125%
      );
    }

    .location-icon {
      @include mixins.color-svg(
        './images/map-marker.svg',
        var(--messageMetadataIconColorIncoming),
        100%
      );
    }

    .saved-message-icon {
      @include mixins.color-svg(
        './images/icons/bookmark-filled.svg',
        var(--messageMetadataIconColorIncoming),
        100%
      );
    }

    .date,
    .edited {
      color: var(--messageMetadataIncoming);
    }
  }

  .msg-container {
    background-color: var(--messageIncomingBg);
    --messageBg: var(--messageIncomingBg);

    &,
    .message-attachment-media {
      border-bottom-left-radius: 1px;
    }
  }
}

.message.outgoing {
  flex-direction: row-reverse;
  float: right;
  margin-right: 0;

  .metadata:not(.with-image-no-caption) {
    .date,
    .edited {
      color: var(--messageOutgoingStatusColor);
    }

    .padlock-icon {
      @include mixins.color-svg(
        './images/padlock.svg',
        var(--messageMetadataIconColorOutgoing),
        125%
      );
    }

    .location-icon {
      @include mixins.color-svg(
        './images/map-marker.svg',
        var(--messageMetadataIconColorOutgoing),
        100%
      );
    }

    .saved-message-icon {
      @include mixins.color-svg(
        './images/icons/bookmark-filled.svg',
        var(--messageMetadataIconColorOutgoing),
        100%
      );
    }

    .status-icon.read,
    .status-icon.delivered {
      background-color: var(--messageOutgoingStatusColor);
    }
  }
  .metadata.with-image-no-caption > .status-icon {
    background-color: white;
  }

  .msg-container {
    background-color: var(--messageOutgoingBg);
    --messageBg: var(--messageOutgoingBg);

    &,
    .message-attachment-media {
      border-bottom-right-radius: 1px;
    }
  }
}
/* ... */

